--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+grid-template-columns: repeat(8, 50px);
+  grid-template-rows: repeat(8, 50px);
+  gap: 2px;
+  margin: 20px auto;
+  width: 416px;
+}
+
+#board div {
+  width: 50px;
+  height: 50px;
+  background-color: green;
+  border-radius: 50%;
+  cursor: pointer;
+}
 
