--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
-grid-template-columns: repeat(8, 50px);
-  grid-template-rows: repeat(8, 50px);
-  gap: 2px;
-  margin: 20px auto;
-  width: 416px;
-}
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>オセロゲーム</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#000000" />
+  <link rel="icon" href="icons/icon-192.png" />
+</head>
+<body>
+  <h1>オセロゲーム</h1>
+  <div id="board"></div>
+  <p id="turn">現在のターン: 黒</p>
 
-#board div {
-  width: 50px;
-  height: 50px;
-  background-color: green;
-  border-radius: 50%;
-  cursor: pointer;
-}
-
+  <script src="script.js"></script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('service-worker.js')
+          .then(reg => console.log('Service Worker registered:', reg))
+          .catch(err => console.error('Service Worker registration failed:', err));
+      });
+    }
+  </script>
+</body>
+</html>
